--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -12,7 +12,7 @@ builds:
     goarch:
       - amd64
     main: ./cmd/mnml
-    binary: bin/mmnl
+    binary: bin/mnml
     ldflags:
       - -s -w -X internal.version.Version={{.Version}} -X internal.version.Commit={{.Commit}} -X internal.version.date={{.Date}}
 archives:
