Ignore golden files pre-commit
Those files are auto-generated and should not be linted or fixed by
pre-commit.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,4 +19,5 @@ repos:
       - id: check-merge-conflict
       - id: check-yaml
       - id: end-of-file-fixer
+        exclude: "^.*\\.golden$"
       - id: trailing-whitespace
